--- a/APP Kivy/vendas.kv
+++ b/APP Kivy/vendas.kv
@@ -2,13 +2,29 @@
 
 <Btn@Button>:
     background_normal: ''
-    background_color: hex('#FFFF00')
+    background_color: hex('#393939')
+
+<Btn_verde@Button>:
+    background_normal: ''
+    background_color: hex('#009900')
+
+<Btn_vermelho@Button>:
+    background_normal: ''
+    background_color: hex('#FF0000')
+
+<Label_azul@Label>:
+    canvas.before:
+        Color:
+            rgba: hex('#080FFF')
+        Rectangle:
+            size: self.size
+            pos: self.pos
 
 
 <VendasWindows>:
     canvas.before:
         Color:
-            rgba: hex('#0000FF')
+            rgba: hex('#BA55D3')
         Rectangle:
             size: self.size
             pos: self.pos
@@ -22,7 +38,7 @@
             id: lbl_bemvindo
             size_hint_x: .25
             text: 'Seja Bem Vindo: '
-            color: hex('#00FFFF')
+            color: hex('#FFFFFF')
 
         GridLayout:
             size_hint_x: .25
@@ -30,16 +46,16 @@
             cols: 2
             Label:
                 text: 'Data: '
-                color: hex('#00FFFF')
+                color: hex('#FFFFFF')
             Label:
                 id: data
-                color: hex('#00FFFF')
+                color: hex('#FFFFFF')
             Label:
                 text: 'Hora: '
-                color: hex('#00FFFF')
+                color: hex('#FFFFFF')
             Label:
                 id: hora
-                color: hex('#00FFFF')
+                color: hex('#FFFFFF')
         Label:
             size_hint_x: .2
             
@@ -50,7 +66,7 @@
             text: 'Administrador'
             on_release: root.admin()
 
-        Btn:
+        Btn_vermelho:
             id: sair_btn
             size_hint_x: .15 
             text: 'Sair'
@@ -59,27 +75,81 @@
     BoxLayout:
         canvas.before:
             Color:
-                rgba: hex('#FF8C00')
+                rgba: hex('#FA8072')
             Rectangle:
                 size: self.size
                 pos: self.pos
-        size_hint_y: .85
+        size_hint_y: .87
           
         BoxLayout:
             size_hint_x: .7
+            orientation: 'vertical'
+            spacing: '.5'
+            GridLayout:
+                spacing: .5
+                size_hint_y: .1
+                rows: 2
+                cols: 2
+
+                Label_azul:
+                    text: 'Pesquisar Por Código'
+                
+                Label_azul:
+                    text: 'Pesquisar Por Nome'
+                
+                TextInput:
+                    id: pesquisar_codigo
+                    multiline: False
+                    on_text_validate: root.add_produto_codigo(self.text)
+                
+                TextInput:
+                    id: pesquisar_nome
+                    multiline: False
+                    on_text_validate: root.add_produto_nome(self.text)
+
 
             BoxLayout:
                 size_hint_y: .8
                 orientation: 'vertical'
 
+                BoxLayout:
+                    size_hint_y: .05
+                    spacing: .5
+                    Label_azul:
+                        text: 'COD'
+                        size_hint_x: .1
+                    Label_azul:
+                        text: 'Produto'
+                        size_hint_x: .5
+                    Label_azul:
+                        text: 'QTD'
+                        size_hint_x: .1
+                    Label_azul:
+                        text: 'Preço p/ Unid.'
+                        size_hint_x: .15
+                    Label_azul:
+                        text: 'Valor Total'
+                        size_hint_x: .15
+                
+                BoxLayout:
+
             BoxLayout:
-                size_hint_y: .8
-                orientation: 'vertical'
+                size_hint_y: .1
+                spacing: .5
+
+                Btn_vermelho:
+                    text: 'Deletar'
+                    on_release: root.deletar()
+                
+                Btn_verde:
+                    text: 'Atualizar Quantidade'
+                    on_release: root.atualizar()
+
 
         BoxLayout:
             canvas.before:
                 Color:
-                    rgba: hex('#E0FFFF')
+                    rgba: hex('#FFFFCC')
                 Rectangle:
                     size: self.size
                     pos: self.pos
