--- a/APP Kivy/vendas.kv
+++ b/APP Kivy/vendas.kv
@@ -31,13 +31,13 @@
 <RV>:
     viewclass: 'SelectableLabel'
     SelectableRecycleBoxLayout:
-        default_size: None, dp(56)
+        default_size: None, dp(30)
         default_size_hint: 1, None
         size_hint_y: None
         height: self.minimum_height
         orientation: 'vertical'
-        multiselect: True
-        touch_multiselect: True
+        multiselect: False
+        touch_multiselect: False
 
 <VendasWindows>:
     canvas.before:
