--- a/Programas/loteria2.0/loteria.kv
+++ b/Programas/loteria2.0/loteria.kv
@@ -20,6 +20,39 @@
             text: 'LOTERIA'
 
         GridLayout:
+            cols: 6
+
+            Label:
+                id: txt_1
+
+            Label:
+                id: txt_2
+
+            Label:
+                id: txt_3
+
+            Label:
+                id: txt_4
+
+            Label:
+                id: txt_5
+
+            Label:
+                id: txt_6
+
+            Label:
+                id: txt_7
+
+            Label:
+                id: txt_8
+
+            Label:
+                id: txt_9
+
+            Label:
+                id: txt_10
+
+        GridLayout:
             cols: 10
 
             Btn:
@@ -30,38 +63,47 @@
             Btn:
                 id: dois
                 text:'2'
+                on_release: root.dois()
 
             Btn:
                 id: tres
                 text:'3'
+                on_release: root.tres()
             
             Btn:
                 id: quatro
                 text:'4'
+                on_release: root.quatro()
 
             Btn:
                 id: cinco
                 text:'5'
+                on_release: root.cinco()
 
             Btn:
                 id: seis
                 text:'6'
+                on_release: root.seis()
 
             Btn:
                 id: sete
                 text:'7'
+                on_release: root.sete()
 
             Btn:
                 id: oito
                 text:'8'
+                on_release: root.oito()
 
             Btn:
                 id: nove
                 text:'9'
+                on_release: root.nove()
 
             Btn:
                 id: dez
                 text:'10'
+                on_release: root.dez()
             
             Btn:
                 id: onze
