--- a/Programas/loteria2.0/loteria.kv
+++ b/Programas/loteria2.0/loteria.kv
@@ -20,40 +20,14 @@
             text: 'LOTERIA'
 
         GridLayout:
-            cols: 6
+            cols: 1
 
             Label:
-                id: txt_1
+                id: escolhas
 
-            Label:
-                id: txt_2
-
-            Label:
-                id: txt_3
-
-            Label:
-                id: txt_4
-
-            Label:
-                id: txt_5
-
-            Label:
-                id: txt_6
-
-            Label:
-                id: txt_7
-
-            Label:
-                id: txt_8
-
-            Label:
-                id: txt_9
-
-            Label:
-                id: txt_10
 
         GridLayout:
-            cols: 10
+            cols: 3
 
             Btn:
                 id: um
@@ -69,238 +43,3 @@
                 id: tres
                 text:'3'
                 on_release: root.tres()
-            
-            Btn:
-                id: quatro
-                text:'4'
-                on_release: root.quatro()
-
-            Btn:
-                id: cinco
-                text:'5'
-                on_release: root.cinco()
-
-            Btn:
-                id: seis
-                text:'6'
-                on_release: root.seis()
-
-            Btn:
-                id: sete
-                text:'7'
-                on_release: root.sete()
-
-            Btn:
-                id: oito
-                text:'8'
-                on_release: root.oito()
-
-            Btn:
-                id: nove
-                text:'9'
-                on_release: root.nove()
-
-            Btn:
-                id: dez
-                text:'10'
-                on_release: root.dez()
-            
-            Btn:
-                id: onze
-                text:'11'
-
-            Btn:
-                id: doze
-                text:'12'
-
-            Btn:
-                id: trese
-                text:'13'
-            
-            Btn:
-                id: quatorze
-                text:'14'
-
-            Btn:
-                id: quinze
-                text:'15'
-
-            Btn:
-                id: dezesseis
-                text:'16'
-
-            Btn:
-                id: dezessete
-                text:'17'
-
-            Btn:
-                id: dezoito
-                text:'18'
-
-            Btn:
-                id: dezenove
-                text:'19'
-
-            Btn:
-                id: vinte
-                text:'20'
-
-            Btn:
-                id: vinteum
-                text:'21'
-
-            Btn:
-                id: vintedois
-                text:'22'
-
-            Btn:
-                id: vintetres
-                text:'23'
-            
-            Btn:
-                id: vintequatro
-                text:'24'
-
-            Btn:
-                id: vintecinco
-                text:'25'
-
-            Btn:
-                id: vinteseis
-                text:'26'
-
-            Btn:
-                id: vintesete
-                text:'27'
-
-            Btn:
-                id: vinteoito
-                text:'28'
-
-            Btn:
-                id: vintenove
-                text:'29'
-
-            Btn:
-                id: trinta
-                text:'30'
-
-            Btn:
-                id: trintaum
-                text:'31'
-
-            Btn:
-                id: trintadois
-                text:'32'
-
-            Btn:
-                id: trintatres
-                text:'33'
-            
-            Btn:
-                id: trintaquatro
-                text:'34'
-
-            Btn:
-                id: trintacinco
-                text:'35'
-
-            Btn:
-                id: trintaseis
-                text:'36'
-
-            Btn:
-                id: trintasete
-                text:'37'
-
-            Btn:
-                id: trintaoito
-                text:'38'
-
-            Btn:
-                id: trintanove
-                text:'39'
-
-            Btn:
-                id: quarenta
-                text:'40'
-
-            Btn:
-                id: quarentaum
-                text:'41'
-
-            Btn:
-                id: quarentadois
-                text:'42'
-
-            Btn:
-                id: quarentatres
-                text:'43'
-            
-            Btn:
-                id: quarentaquatro
-                text:'44'
-
-            Btn:
-                id: quarentacinco
-                text:'45'
-
-            Btn:
-                id: quarentaseis
-                text:'46'
-
-            Btn:
-                id: quarentasete
-                text:'47'
-
-            Btn:
-                id: quarentaoito
-                text:'48'
-
-            Btn:
-                id: quarentanove
-                text:'49'
-
-            Btn:
-                id: cinquenta
-                text:'50'
-
-            Btn:
-                id: cinquentaum
-                text:'51'
-
-            Btn:
-                id: cinquentadois
-                text:'52'
-
-            Btn:
-                id: cinquentatres
-                text:'53'
-            
-            Btn:
-                id: cinquentaquatro
-                text:'54'
-
-            Btn:
-                id: cinquentacinco
-                text:'55'
-
-            Btn:
-                id: cinquentaseis
-                text:'56'
-
-            Btn:
-                id: cinquentasete
-                text:'57'
-
-            Btn:
-                id: cinquentaoito
-                text:'58'
-
-            Btn:
-                id: cinquentanove
-                text:'59'
-
-            Btn:
-                id: sessenta
-                text:'60'
